--- a/css/responsive.css
+++ b/css/responsive.css
@@ -99,6 +99,7 @@
     :root {
         --Nav-Font-Size:0.85rem;
         --Skills-Column-Count:1;
+        --Screen-Frame-Size:10vw;
     }
 
     /* .headwrap {
@@ -186,6 +187,4 @@
     main {
         margin:0 var(--Screen-Frame-Size-Secondary)
     }
-
-    .header-right h2 .dash { display:none }
 }
