--- a/css/style.css
+++ b/css/style.css
@@ -93,8 +93,8 @@ h2 {
 .loading_container {
     position:fixed;
     top:0;left:0;
-    width:100%;
-    height:100%;
+    width:100vw;
+    height:100vh;
     display:grid;
     place-items:center;
     background:var(--Loading-Screen-BG);
